cabal-version: >=1.10
name: code
version: 0.1.0.0
author: Ben Radford
build-type: Simple

library
  default-language: Haskell2010
  exposed-modules:
    Common.Test
    Filesystem
    Http.Server
    Log
    Sqlite
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    direct-sqlite,
    directory,
    errors,
    http-client,
    http-types,
    process,
    text,
    time,
    transformers,
    unix,
    wai,
    warp
  ghc-options:
    -fwarn-unused-imports
  hs-source-dirs:
    common

executable test-common
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    QuickCheck,
    attoparsec,
    base,
    bytestring,
    containers,
    direct-sqlite,
    http-client,
    http-types,
    mtl,
    process,
    time,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    temporary,
    text,
    transformers,
    unix,
    wai
  ghc-options:
    -fwarn-unused-imports
  hs-source-dirs:
    test-common
    common
  other-modules:
    Log
    Sqlite

executable log-view
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    attoparsec,
    base,
    binary,
    bytestring,
    code,
    containers,
    direct-sqlite,
    directory,
    file-embed,
    hinotify,
    http-types,
    process,
    random,
    lucid,
    lucid-svg,
    text,
    time,
    transformers,
    unix,
    wai,
    warp
  ghc-options:
    -fwarn-unused-imports
    -threaded
  hs-source-dirs:
    log-view
  other-modules:
    Strace

executable test-log-view
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    attoparsec,
    base,
    bytestring,
    code,
    containers,
    directory,
    direct-sqlite,
    file-embed,
    hinotify,
    http-client,
    http-types,
    lucid,
    lucid-svg,
    mtl,
    process,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    temporary,
    text,
    time,
    transformers,
    unix,
    wai
  ghc-options:
    -fwarn-unused-imports
  hs-source-dirs:
    test-log-view
    log-view
  other-modules:
    Strace
